# FAUST

./: .gitignore  README.md  config.yaml  kg_maker.py  kg_reader.py  main.py  module_a.py  module_d.py  module_g.py  pyproject.toml  setup.py  units_table.csv
CQs/: CQ_SPARQL_pairs.csv  latency_evaluation_CQs.csv  training_evaluation_CQs.csv
KG/: DBC_KG_train.ttl  DBC_KG_val.ttl  DBC_kg.ttl
KGM/: KGM.xlsx  KGM_train.xlsx  KGM_val.xlsx
MOA_App/: MOA_app.py
Ontology/: DBC.ttl
Ontop/: Competency Questions.txt
Ontop/db/: ontop.duckdb
Ontop/input/: DBC.ttl  mapping.ttl  ontop.properties
Ontop/jdbc/: DROP_YOUR_JDBC_DRIVERS_IN_THIS_DIR.txt
Ontop/owl/: Message.csv  Node.csv  Platform.csv  Sensor.csv  Signal.csv  SignalEncoding.csv  Subclass.csv
